# cake

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/cake/: BloomFilter.h  ConsistentHasher.h  CountMinSketch.h  DisjointSet.h  Hash.h  LRUCache.h  PrefixTree.h  Trie.h
src/: BloomFilter.cpp  CMakeLists.txt  DisjointSet.cpp  Hash.cpp  LRUCache.cpp  MurmurHash2.cpp  PrefixTree.cpp
test/: CMakeLists.txt  main.cpp  test_bloom_filter.cpp  test_disjoint_set.cpp  test_hash.cpp  test_lru_cache.cpp  test_prefix_tree.cpp  test_trie.cpp
